--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -29,9 +29,10 @@ jobs:
         run: npm install
 
       - name: Start Expo server
-        run: npx expo start --web --non-interactive &
+        run: npx expo start --web &
         env:
           EXPO_WEB_PORT: 19006
+          CI: 1
 
       - name: Wait for Expo server to be ready
         run: npx wait-on http://localhost:19006
