--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [18]
 
     steps:
       - name: Checkout repository
@@ -28,8 +28,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install expo-cli
+        run: npm install --save-dev expo-cli
+
       - name: Start Expo server
-        run: npx expo start --web &
+        run: node_modules/.bin/expo start --web &
         env:
           EXPO_WEB_PORT: 19006
           CI: 1
