--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@playwright/test": "^1.44.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.2",
