--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -45,4 +45,4 @@ jobs:
         run: npx wait-on http://localhost:8081
 
       - name: Run tests
-        run: npx jest
+        run: npx jest --config jest.config.js
